get path directly by function getPath